src/test/deca/syntax/invalid/created/miscellaneous/bad_op2.deca
// Description :
//    deux operateurs binaires à la suite
//
// Resultats :
//		Syntaxe error

{
a = a && || b;
}